[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI/EventDisplayer.gd" type="Script" id=2]
[ext_resource path="res://assets/events/refused.png" type="Texture" id=3]
[ext_resource path="res://assets/events/accepted.png" type="Texture" id=4]
[ext_resource path="res://assets/events/hold.png" type="Texture" id=5]
[ext_resource path="res://assets/events/close.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 1 )

[node name="EventDisplayer" type="CanvasLayer"]
script = ExtResource( 2 )
draggable = true

[node name="SingleEventController" type="Control" parent="."]
margin_left = 270.13
margin_top = 78.8107
margin_right = 670.13
margin_bottom = 378.811
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="ColorRect" parent="SingleEventController"]
margin_left = -6.0
margin_top = -6.0
margin_right = 404.0
margin_bottom = 305.0
color = Color( 0.32549, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="ColorRect" parent="SingleEventController"]
margin_left = -0.500504
margin_right = 400.0
margin_bottom = 300.0
color = Color( 0.372549, 0.145098, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleController" type="Control" parent="SingleEventController"]
margin_left = 56.7529
margin_top = -4.44941
margin_right = 56.7529
margin_bottom = -4.44941
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="SingleEventController/TitleController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0555
margin_top = 60.6689
margin_right = 53.9445
margin_bottom = 88.6689
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 1 )
text = "Event :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" type="ColorRect" parent="SingleEventController/TitleController"]
margin_left = 79.0
margin_top = 44.0
margin_right = 301.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 82.183, 114.337 )
color = Color( 0.501961, 0.203922, 0.113725, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SingleEventController/TitleController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 92.0
margin_top = 54.0
margin_right = 290.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 2 )
text = "This is where title
goes."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionController" type="Control" parent="SingleEventController"]
margin_left = 56.7529
margin_top = -4.44941
margin_right = 56.7529
margin_bottom = -4.44941
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="SingleEventController/DescriptionController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.7395
margin_top = 133.492
margin_right = 68.2605
margin_bottom = 153.492
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 3 )
text = "Description :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBackground2" type="ColorRect" parent="SingleEventController/DescriptionController"]
margin_left = 85.0
margin_top = 121.0
margin_right = 306.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 82.183, 114.337 )
color = Color( 0.501961, 0.203922, 0.113725, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="SingleEventController/DescriptionController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 93.0
margin_top = 136.0
margin_right = 299.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 4 )
text = "This is where description goes."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButton" type="TextureButton" parent="SingleEventController"]
margin_left = 351.411
margin_top = 264.864
margin_right = 379.411
margin_bottom = 291.864
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefuseButton" type="TextureButton" parent="SingleEventController"]
margin_left = 22.4558
margin_top = 264.909
margin_right = 49.4558
margin_bottom = 291.909
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldButton" type="TextureButton" parent="SingleEventController"]
margin_left = 186.252
margin_top = 266.909
margin_right = 213.252
margin_bottom = 291.909
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="SingleEventController"]
margin_left = 363.155
margin_top = 11.0729
margin_right = 391.155
margin_bottom = 40.0729
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="SingleEventController/Window" to="." method="_on_Window_mouse_entered"]
[connection signal="mouse_exited" from="SingleEventController/Window" to="." method="_on_Window_mouse_exited"]
[connection signal="pressed" from="SingleEventController/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="SingleEventController/RefuseButton" to="." method="_on_RefuseButton_pressed"]
[connection signal="pressed" from="SingleEventController/HoldButton" to="." method="_on_HoldButton_pressed"]
[connection signal="pressed" from="SingleEventController/CloseButton" to="." method="_on_CloseButton_pressed"]
